# ci-tester

./: .clang-tidy  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile
cmake/: clang_tools.cmake
scripts/: build.sh  coverage_report.sh  default_vars.sh  developer_setup.sh
scripts/git-hooks/: pre-commit
src/: CMakeLists.txt  main.cpp
src/ci-tester/: CMakeLists.txt  main.cpp
